Adds_Item_APIs: Add OPENAPI YAML for Items, Add Controller, Service, Model, Utils, Repository for Item API